<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/bowling"
        android:icon="@drawable/bowling3"
        android:iconTint="@color/green"
        app:showAsAction="always"
        android:title="@string/bowling">
    </item>
    <item
        android:id="@+id/menu"
        android:icon="@drawable/menu2"
        android:iconTint="@color/green"
        app:showAsAction="always"
        android:title="@string/menu">
    </item>
    <item
        android:id="@+id/info"
        android:icon="@drawable/contact"
        android:iconTint="@color/green"
        app:showAsAction="always"
        android:title="@string/information">
    </item>
    <item
        android:id="@+id/logoutItem"
        android:icon="@drawable/logout1"
        android:iconTint="@color/green"
        app:showAsAction="always"
        android:title="@string/logout"
        android:onClick="logout">
    </item>
</menu>