<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".RegisterActivity"
    android:fontFamily="times">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/background_picture"
            android:layout_width="match_parent"
            android:layout_height="576dp"
            android:scaleType="centerCrop"
            android:alpha="0.5"
            android:src="@drawable/pin" />

        <TextView
            android:id="@+id/registrationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="60dp"
            android:text="Registration"
            android:textColor="#FF7C7C"
            android:textStyle="italic"
            android:textSize="45sp"
            android:gravity="center" />

        <LinearLayout
            android:id="@+id/register_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/registrationTextView">

            <EditText
                android:id="@+id/userFirstNameEditText"
                android:layout_width="170dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="15dp"
                android:ems="10"
                android:hint="@string/user_first_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/userLastNameEditText"
                android:layout_width="170dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/user_last_name"
                android:inputType="textPersonName"
                />

        </LinearLayout>

        <EditText
            android:id="@+id/userEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="@string/email_adress"
            android:inputType="textEmailAddress"
            android:layout_below="@id/register_linearlayout" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_below="@id/userEmailEditText" />

        <EditText
            android:id="@+id/passwordAgainEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="@string/password_again"
            android:inputType="textPassword"
            android:layout_below="@id/passwordEditText" />

        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:layout_below="@id/passwordAgainEditText" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/phoneEditText"
            android:layout_marginTop="60dp"
            android:layout_centerHorizontal="true"
            >

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:hint="@string/register"
                android:backgroundTint="@color/blue"
                android:textColorHint="@color/white"
                android:onClick="register"/>

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:hint="@string/cancel"
                android:backgroundTint="@color/blue"
                android:textColorHint="@color/white"
                android:onClick="cancel"
                android:layout_marginBottom="60dp"/>
        </LinearLayout>

</RelativeLayout>
</ScrollView>
