<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".BowlingActivity"
    android:fontFamily="times">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/menu_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@color/blue">

                <TextView
                    android:id="@+id/cim"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@color/blue"
                    android:gravity="center"
                    android:text="Strike Scheduler"
                    android:textAlignment="center"
                    android:textSize="20dp"
                    android:textStyle="bold|italic" />

                <ImageButton
                    android:id="@+id/button_bowling"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@color/blue"
                    android:contentDescription="Bowling"
                    android:onClick="bowling"
                    android:padding="13dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/bowling" />

                <ImageButton
                    android:id="@+id/button_profile"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@color/blue"
                    android:contentDescription="Profile"
                    android:onClick="profile"
                    android:padding="4dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/profile2" />

                <ImageButton
                    android:id="@+id/button_logout"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@color/blue"
                    android:contentDescription="Logout"
                    android:onClick="logout"
                    android:paddingLeft="7dp"
                    android:paddingTop="14dp"
                    android:paddingBottom="9dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/logout1" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/header_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/gif_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/loop" />

                <TextView
                    android:id="@+id/track_booking_textview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/orange"
                    android:paddingLeft="30dp"
                    android:paddingTop="10dp"
                    android:paddingRight="30dp"
                    android:paddingBottom="15dp"
                    android:text="@string/track_booking_textview"
                    android:textAlignment="center"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/prices_textview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/yellow_2"
                    android:paddingLeft="30dp"
                    android:paddingTop="10dp"
                    android:paddingRight="30dp"
                    android:paddingBottom="15dp"
                    android:text="@string/prices_textview"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/booking_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/brown"
                    android:onClick="goToBooking"
                    android:padding="20dp"
                    android:text="To book a track, click here!"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="italic|bold" />

                <LinearLayout
                    android:id="@+id/services"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/food"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:padding="20dp"
                        android:text="@string/foodlist" />

                    <TextView
                        android:id="@+id/drinks"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:padding="20dp"
                        android:text="@string/drinklist" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>